Updates dependencies and gradle. Enforces code style